    - Added RES_get_text and RES_set_text functions to EGA.
- v.5.7.8 (2023-10-06)
    - Improved Portuguese (Brazilian) translation.
    - Relaxed font selection requirements.
    - Added Traditional Chinese translation.
- v.5.7.9 (2023-11-14)
    - Added EGA sample DeleteNonEnglish.ega.
    - Fixed IDS_THEREISUPDATE translation.
- v.5.8.0 (2024-03-03)
    - Coping with security scan when generating EXE files.
- v.5.8.1 (2024-03-04)
    - Improved IDD_ADDCTRL and IDD_CTRLPROP dialogs.
- v.5.8.2 (2024-07-20)
    - Added ES_AUTOHSCROLL style to some text boxes.
    - Fixed loading failure of Win2k3 ieframe.dll BITMAP 214.
    - Centering "Edit Dialog" window.
    - Supported exporting RES file.
- v.5.8.3 (2024-07-24)
    - Auto filling resource name from filename.
    - Added resource language setting.
    - Fixed freeze on Enter key.
    - Supported x64.
- v.5.8.4 (2024-08-02)
    - Separated x86 and x64 settings.
    - Fixed misinterpretation of open filter index.
- v.5.8.5 (2024-08-21)
    - Improved EGA console usability.
    - Abolished EGA input function.
- v.5.8.6 (2025-02-04)
    - Added Spanish translation.
    - Fixed RES_save function for saving *.dll.
    - Don't use SUBLANG_CUSTOM_DEFAULT, SUBLANG_CUSTOM_UNSPECIFIED, and SUBLANG_UI_CUSTOM_DEFAULT for backward compatibility.
- v.5.8.7 (2025-04-04)
    - Reduced memory leaks and handle leaks.
    - Improved main icon.
    - Improved adding icon/cursor/bitmap/resource UI/UX.
- v.5.8.8 (2025-06-03)
    - Added digital signature to EXE files.
    - Added Turkish translation.
    - Supported TEXTINCLUDE 2 and TEXTINCLUDE 3.
    - Fixed MRadWindow crash.
    - Updated installers.
- v.5.8.9 (2025-XX-YY)
    - Notified icon change on saving EXE file by SHChangeNotify.
    - Added English "Neutral" entry to the language list.
    - Fixed initial language list box selection.
    - Correctly retrieving info of RLE Bitmap.
    - Reduced flickering when moving the splitter.
    - Disabled WoW filesystem redirection.