@@ -342,3 +342,4 @@
     - Correctly retrieving info of RLE Bitmap.
     - Reduced flickering when moving the splitter.
     - Disabled WoW filesystem redirection.
+    - Enabled filesystem auto-completion.
